build-logs-failed/build-rattle-0.2.log
Build profile: -w ghc-9.6.6 -O1
In order, the following will be built (use -v for more details):
 - rattle-0.2 (lib) (first run)
 - rattle-0.2 (exe:pipeline) (first run)
 - rattle-0.2 (test:rattle-test) (first run)
 - rattle-0.2 (exe:rattle-benchmark) (first run)
Warning: rattle.cabal:1:28: Packages with 'cabal-version: 1.12' or later
should specify a specific version of the Cabal spec of the form
'cabal-version: x.y'. Use 'cabal-version: 1.18'.
Configuring library for rattle-0.2...
Preprocessing library for rattle-0.2...
Building library for rattle-0.2...
[ 1 of 23] Compiling Development.Rattle.CmdOption
[ 2 of 23] Compiling General.Bilist
[ 3 of 23] Compiling General.Binary

src/General/Binary.hs:80:64: warning: [GHC-68441] [-Wdeprecations]
    In the use of ‘memcpy’
    (imported from Data.ByteString.Internal, but defined in Data.ByteString.Internal.Type):
    Deprecated: "Use Foreign.Marshal.Utils.copyBytes instead"
   |
80 |     putEx x = Builder n $ \ptr i -> BS.useAsCString x $ \bs -> BS.memcpy (ptr `plusPtr` i) (castPtr bs) (fromIntegral n)
   |                                                                ^^^^^^^^^

src/General/Binary.hs:89:44: warning: [GHC-68441] [-Wdeprecations]
    In the use of ‘memcpy’
    (imported from Data.ByteString.Internal, but defined in Data.ByteString.Internal.Type):
    Deprecated: "Use Foreign.Marshal.Utils.copyBytes instead"
   |
89 |                 BS.useAsCString x $ \bs -> BS.memcpy (ptr `plusPtr` i) (castPtr bs) (fromIntegral n)
   |                                            ^^^^^^^^^

src/General/Binary.hs:104:13: warning: [GHC-68441] [-Wdeprecations]
    In the use of ‘memcpy’
    (imported from Data.ByteString.Internal, but defined in Data.ByteString.Internal.Type):
    Deprecated: "Use Foreign.Marshal.Utils.copyBytes instead"
    |
104 |             BS.memcpy (p `plusPtr` i) (castPtr bs) (fromIntegral n)
    |             ^^^^^^^^^
[ 4 of 23] Compiling General.EscCodes
[ 5 of 23] Compiling Development.Rattle.UI
[ 6 of 23] Compiling General.Extra
[ 7 of 23] Compiling General.FileName
[ 8 of 23] Compiling General.FileInfo
[ 9 of 23] Compiling Development.Rattle.Types
[10 of 23] Compiling Development.Rattle.Options
[11 of 23] Compiling Development.Rattle.Hazards
[12 of 23] Compiling Development.Rattle.Hash
[13 of 23] Compiling Development.Rattle.Shared
[14 of 23] Compiling General.Thread
[15 of 23] Compiling General.Pool
[16 of 23] Compiling Development.Rattle.Server

src/Development/Rattle/Server.hs:46:12: warning: [GHC-58520] [-Wtype-equality-requires-operators]
    The use of ‘~’ without TypeOperators
    will become an error in a future GHC release.
    Suggested fix: Perhaps you intended to use TypeOperators
   |
46 | instance a ~ () => C.CmdArguments (Run a) where
   |            ^
[17 of 23] Compiling Development.Rattle.Derived
[18 of 23] Compiling Development.Rattle.Program
[19 of 23] Compiling Paths_rattle
[20 of 23] Compiling General.Paths
[21 of 23] Compiling General.Template

src/General/Template.hs:52:77: warning: [GHC-68441] [-Wdeprecations]
    In the use of ‘iso8601DateFormat’
    (imported from Data.Time, but defined in Data.Time.Format.Locale):
    Deprecated: "use "Data.Time.Format.ISO8601" functions instead"
   |
52 |                 "\nvar generated = " ++ show (formatTime defaultTimeLocale (iso8601DateFormat (Just "%H:%M:%S")) time)
   |                                                                             ^^^^^^^^^^^^^^^^^
[22 of 23] Compiling Development.Rattle.Profile
[23 of 23] Compiling Development.Rattle
Warning: rattle.cabal:1:28: Packages with 'cabal-version: 1.12' or later
should specify a specific version of the Cabal spec of the form
'cabal-version: x.y'. Use 'cabal-version: 1.18'.
Configuring executable 'pipeline' for rattle-0.2...
Preprocessing executable 'pipeline' for rattle-0.2...
Building executable 'pipeline' for rattle-0.2...
[1 of 1] Compiling Pipeline
[2 of 2] Linking /tmp/workdir-rattle/rattle-0.2/dist-newstyle/build/x86_64-linux/ghc-9.6.6/rattle-0.2/x/pipeline/build/pipeline/pipeline
Warning: rattle.cabal:1:28: Packages with 'cabal-version: 1.12' or later
should specify a specific version of the Cabal spec of the form
'cabal-version: x.y'. Use 'cabal-version: 1.18'.
Configuring test suite 'rattle-test' for rattle-0.2...
Preprocessing test suite 'rattle-test' for rattle-0.2...
Building test suite 'rattle-test' for rattle-0.2...
[ 1 of 29] Compiling Development.Rattle.CmdOption
[ 2 of 29] Compiling General.Bilist
[ 3 of 29] Compiling General.Binary

src/General/Binary.hs:80:64: warning: [GHC-68441] [-Wdeprecations]
    In the use of ‘memcpy’
    (imported from Data.ByteString.Internal, but defined in Data.ByteString.Internal.Type):
    Deprecated: "Use Foreign.Marshal.Utils.copyBytes instead"
   |
80 |     putEx x = Builder n $ \ptr i -> BS.useAsCString x $ \bs -> BS.memcpy (ptr `plusPtr` i) (castPtr bs) (fromIntegral n)
   |                                                                ^^^^^^^^^

src/General/Binary.hs:89:44: warning: [GHC-68441] [-Wdeprecations]
    In the use of ‘memcpy’
    (imported from Data.ByteString.Internal, but defined in Data.ByteString.Internal.Type):
    Deprecated: "Use Foreign.Marshal.Utils.copyBytes instead"
   |
89 |                 BS.useAsCString x $ \bs -> BS.memcpy (ptr `plusPtr` i) (castPtr bs) (fromIntegral n)
   |                                            ^^^^^^^^^

src/General/Binary.hs:104:13: warning: [GHC-68441] [-Wdeprecations]
    In the use of ‘memcpy’
    (imported from Data.ByteString.Internal, but defined in Data.ByteString.Internal.Type):
    Deprecated: "Use Foreign.Marshal.Utils.copyBytes instead"
    |
104 |             BS.memcpy (p `plusPtr` i) (castPtr bs) (fromIntegral n)
    |             ^^^^^^^^^
[ 4 of 29] Compiling General.EscCodes
[ 5 of 29] Compiling Development.Rattle.UI
[ 6 of 29] Compiling General.Extra
[ 7 of 29] Compiling General.FileName
[ 8 of 29] Compiling General.FileInfo
[ 9 of 29] Compiling Development.Rattle.Types
[10 of 29] Compiling Development.Rattle.Options
[11 of 29] Compiling Development.Rattle.Hazards
[12 of 29] Compiling Development.Rattle.Hash
[13 of 29] Compiling Development.Rattle.Shared
[14 of 29] Compiling General.Thread
[15 of 29] Compiling General.Pool
[16 of 29] Compiling Development.Rattle.Server

src/Development/Rattle/Server.hs:46:12: warning: [GHC-58520] [-Wtype-equality-requires-operators]
    The use of ‘~’ without TypeOperators
    will become an error in a future GHC release.
    Suggested fix: Perhaps you intended to use TypeOperators
   |
46 | instance a ~ () => C.CmdArguments (Run a) where
   |            ^
[17 of 29] Compiling Development.Rattle.Derived
[18 of 29] Compiling Development.Rattle.Program
[19 of 29] Compiling Paths_rattle
[20 of 29] Compiling General.Paths
[21 of 29] Compiling General.Template

src/General/Template.hs:52:77: warning: [GHC-68441] [-Wdeprecations]
    In the use of ‘iso8601DateFormat’
    (imported from Data.Time, but defined in Data.Time.Format.Locale):
    Deprecated: "use "Data.Time.Format.ISO8601" functions instead"
   |
52 |                 "\nvar generated = " ++ show (formatTime defaultTimeLocale (iso8601DateFormat (Just "%H:%M:%S")) time)
   |                                                                             ^^^^^^^^^^^^^^^^^
[22 of 29] Compiling Development.Rattle.Profile
[23 of 29] Compiling Development.Rattle
[24 of 29] Compiling Test.Example.Stack

test/Test/Example/Stack.hs:76:32: error: [GHC-83865]
    • Couldn't match expected type: Q (TExp (a -> IO ()))
                  with actual type: Code m0 (FilePath -> IO b0)
    • In the Template Haskell quotation
        [|| \ dir
              -> do removePathForcibly dir
                    cmd "cabal unpack" dir ||]
      In the second argument of ‘haskell’, namely
        ‘[|| \ dir
               -> do removePathForcibly dir
                     .... ||]’
      In the expression:
        haskell
          "unpack"
          [|| \ dir
                -> do removePathForcibly dir
                      .... ||]
    • Relevant bindings include
        cabalUnpack :: a -> Run ()
          (bound at test/Test/Example/Stack.hs:76:1)
   |
76 | cabalUnpack = haskell "unpack" [|| \dir -> do
   |                                ^^^^^^^^^^^^^^...

test/Test/Example/Stack.hs:81:30: error: [GHC-83865]
    • Couldn't match expected type: Q (TExp (a -> IO ()))
                  with actual type: Code m1 ((FilePath, [Char]) -> IO b1)
    • In the Template Haskell quotation
        [|| \ (dir, name)
              -> do C.cmd_ (Cwd dir) "cabal v1-build" ("lib:" ++ name)
                    xs <- filter (\ x -> takeExtension x == ".conf")
                            <$> listFiles (dir </> "dist/package.conf.inplace")
                    .... ||]
      In the second argument of ‘haskell’, namely
        ‘[|| \ (dir, name)
               -> do C.cmd_ (Cwd dir) "cabal v1-build" ("lib:" ++ name)
                     .... ||]’
      In the expression:
        haskell
          "build"
          [|| \ (dir, name)
                -> do C.cmd_ (Cwd dir) "cabal v1-build" ("lib:" ++ name)
                      .... ||]
    • Relevant bindings include
        cabalBuild :: a -> Run ()
          (bound at test/Test/Example/Stack.hs:81:1)
   |
81 | cabalBuild = haskell "build" [|| \(dir, name) -> do
   |                              ^^^^^^^^^^^^^^^^^^^^^^...
[25 of 29] Compiling Test.Type
[26 of 29] Compiling Test.Trace
[27 of 29] Compiling Test.Simple
[28 of 29] Compiling Test.Example.FSATrace
Error: [Cabal-7125]
Failed to build test:rattle-test from rattle-0.2.

